--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,10 @@ sfml-system-2.dll
 sfml-system-d-2.dll
 sfml-window-2.dll
 sfml-window-d-2.dll
+Fog.jpg
+Overcast.jpg
+Overcast.png
+Sunny.png
+download (2).jpg
+x.png
+y.png
